--- a/templates/weather/map.html
+++ b/templates/weather/map.html
@@ -54,7 +54,7 @@
                     <i class="bi bi-geo-alt me-2"></i>
                     Staðsetning Veðurstöðvar
                 </h1>
-                <p class="text-muted">Gagnvirkt kort sem sýnir staðsetningu Akureyrar veðurstöðvar</p>
+                <p style="color: #b8c5d6;">Gagnvirkt kort sem sýnir staðsetningu Akureyrar veðurstöðvar</p>
             </div>
         </div>
     </div>
